<resources>
    <string name="app_name">FacultyProject</string>
    <string name="f_id_text_view"> </string>
    <string name="f_Lname_text_view"> </string>
    <string name="f_Fname_text_view"> </string>
    <string name="f_salary_text_view"> </string>
    <string name="f_rate_text_view"> </string>
    <string name="f_bonus_text_view"> </string>
    <string name="prev_faculty_button">PREVIOUS FACULTY</string>
    <string name="next_faculty_button">NEXT FACULTY</string>
    <string name="faculty_details_button">FACULTY DETAILS</string>
    <string name="all_faculties_button">ALL FACULTIES</string>

    <string name="f_id_update_edit_text">dummy text</string>
    <string name="f_Lname_update_edit_text">dummy text</string>
    <string name="f_Fname_update_edit_text">dummy text</string>
    <string name="f_salary_update_edit_text">dummy text</string>
    <string name="f_rate_update_edit_text">dummy text</string>
    <string name="f_bonus_update_text_view"> </string>
    <string name="faculty_update_button">UPDATE FACULTY/DISPLAY BONUS</string>

    <string name="f_rate_recycler_text_view"> </string>
    <string name="f_id_recycler_text_view"> </string>
    <string name="f_lname_recycler_text_view"> </string>
    <string name="f_fname_recycler_text_view"> </string>
    <string name="f_salary_recycler_text_view"> </string>


</resources>