<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="110dp"
    android:padding="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/f_rate_recycler_text_view"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/f_rate_recycler_text_view" />

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/f_id_recycler_text_view"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:text="@string/f_id_recycler_text_view" />

            <TextView
                android:id="@+id/f_lname_recycler_text_view"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:text="@string/f_lname_recycler_text_view" />

            <TextView
                android:id="@+id/f_fname_recycler_text_view"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:text="@string/f_fname_recycler_text_view" />

            <TextView
                android:id="@+id/f_salary_recycler_text_view"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:text="@string/f_salary_recycler_text_view" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#808080"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>