<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FacultyActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:orientation="horizontal"
            android:layout_marginTop="50dp">

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingStart="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical"
                    android:text="Faculty ID"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingStart="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical"
                    android:text="Faculty Last Name"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingStart="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical"
                    android:text="Faculty First Name"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingStart="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical"
                    android:text="Faculty Salary"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingStart="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical"
                    android:text="Faculty Rate"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingStart="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical"
                    android:text="Faculty Bonus Amount"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/f_id_update_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingStart="10dp"
                    android:layout_marginTop="10dp"
                    android:inputType="text"
                    android:text="@string/f_id_update_edit_text"/>

                <EditText
                    android:id="@+id/f_Lname_update_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingStart="10dp"
                    android:layout_marginTop="10dp"
                    android:inputType="text"
                    android:text="@string/f_Lname_update_edit_text"/>

                <EditText
                    android:id="@+id/f_Fname_update_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingStart="10dp"
                    android:layout_marginTop="10dp"
                    android:inputType="text"
                    android:text="@string/f_Fname_update_edit_text"/>

                <EditText
                    android:id="@+id/f_salary_update_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingStart="10dp"
                    android:layout_marginTop="10dp"
                    android:inputType="text"
                    android:text="@string/f_salary_update_edit_text"/>

                <EditText
                    android:id="@+id/f_rate_update_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingStart="10dp"
                    android:layout_marginTop="10dp"
                    android:inputType="text"
                    android:text="@string/f_rate_update_edit_text"/>

                <TextView
                    android:id="@+id/f_bonus_update_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingStart="10dp"
                    android:gravity="center_vertical"
                    android:layout_marginTop="10dp"
                    android:text="@string/f_bonus_update_text_view"/>

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/faculty_update_button"
            android:layout_width="300dp"
            android:layout_height="50dp"
            app:cornerRadius="5dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/faculty_update_button"/>

    </LinearLayout>

</FrameLayout>